instance1/temp-retrieve/objects/Appointment__c/fields/appointment_cancellation_reason__c.field-meta.xml
<CustomField>
    <fullName>appointment_cancellation_reason__c</fullName>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cancelled Via Calendly</fullName>
            </value>
            <value>
                <fullName>Covid-19 Concerns</fullName>
            </value>
            <value>
                <fullName>Emergency Situations</fullName>
            </value>
            <value>
                <fullName>Fear or Anxiety</fullName>
            </value>
            <value>
                <fullName>Financial Reasons</fullName>
            </value>
            <value>
                <fullName>Forgot Appointment</fullName>
            </value>
            <value>
                <fullName>Health Improvement</fullName>
            </value>
            <value>
                <fullName>Insurance Issues</fullName>
            </value>
            <value>
                <fullName>Long Wait Times</fullName>
            </value>
            <value>
                <fullName>Miscommunication or Misunderstanding</fullName>
            </value>
            <value>
                <fullName>No Longer a Patient</fullName>
            </value>
            <value>
                <fullName>Patient Illness</fullName>
            </value>
            <value>
                <fullName>Provider Preference</fullName>
            </value>
            <value>
                <fullName>Resolved Issue</fullName>
            </value>
            <value>
                <fullName>Scheduling Conflicts</fullName>
            </value>
            <value>
                <fullName>Service Dissatisfaction</fullName>
            </value>
            <value>
                <fullName>Transportation Issues</fullName>
            </value>
            <value>
                <fullName>Weather Conditions</fullName>
            </value>
            <value>
                <fullName>Rescheduled via Calendly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>