instance1/temp-retrieve/objects/Appointment__c/fields/Arrived_At__c.field-meta.xml
<CustomField>
    <fullName>Arrived_At__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Arrived At (DEPRECIATED)</label>
    <type>DateTime</type>
</CustomField>