instance1/temp-retrieve/objects/Appointment__c/fields/Bussiness_Entity_Id__c.field-meta.xml
<CustomField>
    <fullName>Bussiness_Entity_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bussiness Entity Id (DEPRECIATED)</label>
    <length>245</length>
    <type>Text</type>
</CustomField>