instance1/temp-retrieve/objects/Appointment__c/fields/Ceated_At__c.field-meta.xml
<CustomField>
    <fullName>Ceated_At__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ceated At (DEPRECIATED)</label>
    <type>DateTime</type>
</CustomField>