instance1/temp-retrieve/objects/Appointment__c/fields/Chief_Complaint__c.field-meta.xml
<CustomField>
    <fullName>Chief_Complaint__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Chief Complaint (DEPRECIATED)</label>
    <length>245</length>
    <type>Text</type>
</CustomField>