instance1/temp-retrieve/objects/Appointment__c/fields/Confirmation_Details__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Confirmation Details (DEPRECIATED)</label>
    <length>245</length>
    <type>Text</type>
</CustomField>