instance1/temp-retrieve/objects/Appointment__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Used to track the error message</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Error Message</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>