instance1/temp-retrieve/objects/Appointment__c/fields/Is_Clinical__c.field-meta.xml
<CustomField>
    <fullName>Is_Clinical__c</fullName>
    <formula>IF( ISBLANK(Reason__r.EHR_Profile_Id__c), FALSE, TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Clinical</label>
    <type>Checkbox</type>
</CustomField>