instance1/temp-retrieve/objects/Appointment__c/fields/Is_Force_Overbook__c.field-meta.xml
<CustomField>
    <fullName>Is_Force_Overbook__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Force Overbook (DEPRECIATED)</label>
    <type>Checkbox</type>
</CustomField>