instance1/temp-retrieve/objects/Appointment__c/fields/IsAppointmentConflict__c.field-meta.xml
<CustomField>
    <fullName>IsAppointmentConflict__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When this is checked, there is more than one scheduled appointment for a single opportunity.</description>
    <label>IsAppointmentConflict</label>
    <type>Checkbox</type>
</CustomField>