instance1/temp-retrieve/objects/Appointment__c/fields/IsDemographicConflict__c.field-meta.xml
<CustomField>
    <fullName>IsDemographicConflict__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When there is a patient demographic data differed from the Patient Account then we will turn this flag on for reporting and visibility to end users.</description>
    <label>IsDemographicConflict</label>
    <type>Checkbox</type>
</CustomField>