instance1/temp-retrieve/objects/Appointment__c/fields/Location_Name__c.field-meta.xml
<CustomField>
    <fullName>Location_Name__c</fullName>
    <description>This will be the EHR Office that the Provider is located in.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Office</label>
    <length>245</length>
    <type>Text</type>
</CustomField>