instance1/temp-retrieve/objects/Appointment__c/fields/Office_Id__c.field-meta.xml
<CustomField>
    <fullName>Office_Id__c</fullName>
    <description>The ID of the EHR Office. Used in API Calls</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Office Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>