instance1/temp-retrieve/objects/Appointment__c/fields/Patient_Email__c.field-meta.xml
<CustomField>
    <fullName>Patient_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Patient Email (DEPRECIATED)</label>
    <length>245</length>
    <type>Text</type>
</CustomField>