instance1/temp-retrieve/objects/Appointment__c/fields/Patient_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Patient_First_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Patient First Name (DEPRECIATED)</label>
    <length>245</length>
    <type>Text</type>
</CustomField>