instance1/temp-retrieve/objects/Appointment__c/fields/Profile_Id__c.field-meta.xml
<CustomField>
    <fullName>Profile_Id__c</fullName>
    <description>The EHR Profile Id that was used. Will be used in API Calls.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Profile Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>