instance1/temp-retrieve/objects/Appointment__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Provider (DEPRECIATED)</label>
    <length>245</length>
    <type>Text</type>
</CustomField>