instance1/temp-retrieve/objects/Appointment__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reason</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Appointments</relationshipLabel>
    <relationshipName>Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>