instance1/temp-retrieve/objects/Appointment__c/fields/Recurrence_Id__c.field-meta.xml
<CustomField>
    <fullName>Recurrence_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Recurrence Id (DEPRECIATED)</label>
    <length>245</length>
    <type>Text</type>
</CustomField>