instance1/temp-retrieve/objects/Appointment__c/fields/Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Sub_Status__c</fullName>
    <label>Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>appointment_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Checked In</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>In Room</fullName>
            </value>
            <value>
                <fullName>In Session</fullName>
            </value>
            <value>
                <fullName>License Mismatch</fullName>
            </value>
            <value>
                <fullName>No Show</fullName>
            </value>
            <value>
                <fullName>Not Confirmed</fullName>
            </value>
            <value>
                <fullName>Patient No Show</fullName>
            </value>
            <value>
                <fullName>Patient Request</fullName>
            </value>
            <value>
                <fullName>Provider No Show</fullName>
            </value>
            <value>
                <fullName>Provider Scheduling Conflict</fullName>
            </value>
            <value>
                <fullName>Provider Terminated</fullName>
            </value>
            <value>
                <fullName>Rescheduled</fullName>
            </value>
            <value>
                <fullName>Abandoned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>