instance1/temp-retrieve/objects/Appointment__c/validationRules/Cancelled_with_No_Cancellation_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancelled_with_No_Cancellation_Reason</fullName>
    <active>true</active>
    <description>We need to ensure that they enter a cancellation reason when they cancel an appointment.</description>
    <errorConditionFormula>AND( 
				ISPICKVAL(appointment_Status__c, &quot;Cancelled&quot;),
				ISBLANK(TEXT(appointment_cancellation_reason__c))
)</errorConditionFormula>
    <errorDisplayField>appointment_cancellation_reason__c</errorDisplayField>
    <errorMessage>Please set a cancellation reason.</errorMessage>
</ValidationRule>