instance1/temp-retrieve/objects/Appointment__c/listViews/Appointment_Conflict_Errors.listView-meta.xml
<ListView>
    <fullName>Appointment_Conflict_Errors</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Start_Date__c</columns>
    <columns>appointment_Status__c</columns>
    <columns>Sub_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsAppointmentConflict__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>appointment_Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled,Completed</value>
    </filters>
    <label>Appointment Conflict Errors</label>
</ListView>