instance1/temp-retrieve/objects/Appointment__c/listViews/EHR_Sync_Errors.listView-meta.xml
<ListView>
    <fullName>EHR_Sync_Errors</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Start_Date__c</columns>
    <columns>appointment_Status__c</columns>
    <columns>Sub_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsError__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>appointment_Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled,Completed</value>
    </filters>
    <filters>
        <field>Profile_Id__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Appointment_Id__c</field>
        <operation>equals</operation>
    </filters>
    <label>EHR Sync Errors</label>
</ListView>