instance1/temp-retrieve/objects/Appointment__c/listViews/New_Upcoming_Appts.listView-meta.xml
<ListView>
    <fullName>New_Upcoming_Appts</fullName>
    <columns>Account__c</columns>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Start_Date__c</field>
        <operation>equals</operation>
        <value>TOMORROW</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>precision wellness</value>
    </filters>
    <label>New Patient Upcoming Appts</label>
</ListView>