instance1/temp-retrieve/objects/Appointment__c/listViews/Patient_Demographic_Mismatcch.listView-meta.xml
<ListView>
    <fullName>Patient_Demographic_Mismatcch</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Start_Date__c</columns>
    <columns>appointment_Status__c</columns>
    <columns>Sub_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsDemographicConflict__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>appointment_Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled,Completed</value>
    </filters>
    <label>Patient Demographic Mismatch Errors</label>
</ListView>