instance1/temp-retrieve/objects/Appointment__c/listViews/Patient_Scheduling_Appointment.listView-meta.xml
<ListView>
    <fullName>Patient_Scheduling_Appointment</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Provider_Account__c</columns>
    <columns>appointment_Status__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Visit_Reason__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Queue</filterScope>
    <label>Patient Scheduling</label>
    <queue>Patient_Scheduling</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>