instance1/temp-retrieve/objects/Appointment__c/listViews/Scheduled_Not_Confirmed.listView-meta.xml
<ListView>
    <fullName>Scheduled_Not_Confirmed</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Appointment_Id__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Provider_Account__c</columns>
    <columns>appointment_Status__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Error_Message__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>appointment_Status__c</field>
        <operation>equals</operation>
        <value>Scheduled</value>
    </filters>
    <filters>
        <field>Sub_Status__c</field>
        <operation>equals</operation>
        <value>Not Confirmed</value>
    </filters>
    <label>Scheduled - Not Confirmed</label>
</ListView>