instance1/temp-retrieve/objects/Appointment__c/listViews/Scheduled_Today.listView-meta.xml
<ListView>
    <fullName>Scheduled_Today</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Provider_Account__c</columns>
    <columns>appointment_Status__c</columns>
    <columns>Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>appointment_Status__c</field>
        <operation>equals</operation>
        <value>Scheduled</value>
    </filters>
    <filters>
        <field>Start_Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Scheduled - Today</label>
</ListView>