instance1/temp-retrieve/objects/Appointment__c/listViews/Upcoming_Appointments.listView-meta.xml
<ListView>
    <fullName>Upcoming_Appointments</fullName>
    <columns>Account__c</columns>
    <columns>Start_Date__c</columns>
    <columns>NAME</columns>
    <columns>Provider_Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Start_Date__c</field>
        <operation>equals</operation>
        <value>TOMORROW</value>
    </filters>
    <filters>
        <field>appointment_Status__c</field>
        <operation>equals</operation>
        <value>Scheduled</value>
    </filters>
    <filters>
        <field>Reason__c</field>
        <operation>equals</operation>
        <value>Precision Wellness New Patient Consult</value>
    </filters>
    <label>Upcoming New Pt Appointments</label>
</ListView>